# xrp_wpilib_examples

./: .gitignore  README.md  command_robot.py  hello_motor.py  hello_robot.py  mkdocs.yml  periodic_robot.py  pyproject.toml  robot.py  robot_arcade.py  state_robot.py
01_getting_started/: README.md  hello_controller.py  hello_distance.py  hello_encoders.py  hello_gyro.py  hello_motor.py  hello_rangefinder.py  hello_robot.py  hello_servo.py
02_controllers_and_state_machines/: hello_controller.py  hello_shuffleboard.py  hello_tweakable.py  network_tables_subscriber.py  state_robot.py
02_state_machines_and_shuffleboard/: hello_shuffleboard.py  tweakable_gyro.py  tweakable_servo.py
03_NetworkTables/: initial_robot.py  tweakable_robot.py
03_organizing_code/: readme.md  robot_multiclass.py
docs/: index.md
docs/source_folders/: 01_getting_started.md  02_controllers_network_tables_and_state_machines.md
